# stance_reasoner

./: .gitignore  README.md  pyproject.toml
scripts/: evaluate.sh  preprocess_data.sh
src/: callbacks.py  data_preprocessing.py  inference.py  prompts.py
src/stance_datasets/: covid_19.py  semeval_2016_task_6a.py  wt_wt.py
