[tool.poetry]
name = "stance reasoner"
version = "0.1.0"
description = "A Zero-Shot Stance Detection on Social Media with Explicit Reasoning"
authors = ["Maksym Taranukhin <m.taranukhin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.19.1"
langchain = "^0.1.20"
langchain-openai = "^0.1.6"
transformers = "^4.40.2"
tweepy = "^4.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
